# SystemDownloadAccelerator

./: .ci-alpha10-trigger  .ci-alpha11-trigger  .ci-alpha11-trigger-2  .ci-alpha12-trigger  .ci-alpha12-trigger-2  .ci-alpha7-trigger  .ci-alpha7-trigger-2  .ci-alpha7-trigger-3  .ci-alpha8-trigger  .ci-alpha9-trigger  .ci-alpha9-trigger-2  .ci-alpha9-trigger-3  .ci-center-history-alpha6  .ci-central-confirm  .ci-insets-fix  .ci-popup-fix  .ci-popup-fix-2  .ci-popup-fix-3  .ci-real-engine  README.md
.bootstrap/: part00  part01  part02  part03  part04  project.b64
.github/workflows/: alpha12-integrated-diagnostics.yml  bootstrap-pr.yml  bootstrap.yml  build-centered-history.yml  build-domo-probe.yml  build-in-app-dialog-alpha7.yml  domo-probe-ui.yml  rust-rewrite.yml  rust-zygisk-provider.yml
alpha-diagnostics/: Cargo.toml
alpha-diagnostics/src/: main.rs
alpha-module/: action.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
app/src/main/res/values/: sda_styles.xml
ci/: build-alpha10.sh  build-alpha11.sh  build-alpha12-fixed.sh  build-alpha12-integrated-module.sh  build-alpha12.sh  build-alpha7.sh  build-alpha8.sh  build-alpha9.sh
docs/: REAL_MODULE_IMPLEMENTATION.md
domo-probe/: README.md  settings.gradle
domo-probe-ui/: build.gradle.kts  settings.gradle.kts
domo-probe-ui/app/: build.gradle.kts
domo-probe-ui/app/src/main/: AndroidManifest.xml
domo-probe-ui/app/src/main/assets/: xposed_init
domo-probe-ui/app/src/main/res/values/: arrays.xml  strings.xml
domo-probe-ui/xposed-stubs/: build.gradle.kts
domo-probe/app/: build.gradle  proguard-rules.pro
domo-probe/app/src/main/: AndroidManifest.xml
domo-probe/xposed-stubs/: build.gradle
rust/: ARCHITECTURE.md  Cargo.toml
rust-zygisk-provider/: Cargo.toml  README.md  build.sh
rust-zygisk-provider/module/: action.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
rust-zygisk-provider/module/config/: default.conf
rust-zygisk-provider/native/: rz_ffi.h  zygisk.hpp  zygisk_shim.cpp
rust-zygisk-provider/src/: host.rs  lib.rs  monitor.rs  protocol.rs  security.rs
rust/crates/sda-core/: Cargo.toml
rust/crates/sda-core/src/: lib.rs
rust/crates/sda-engine/: Cargo.toml
rust/crates/sda-engine/src/: lib.rs
rust/crates/sda-protocol/: Cargo.toml
rust/crates/sda-protocol/src/: lib.rs
rust/crates/sda-runtime/: Cargo.toml
rust/crates/sda-runtime/src/: lib.rs
rust/crates/sdactl/: Cargo.toml
rust/crates/sdactl/src/: main.rs
rust/crates/sdad/: Cargo.toml
rust/crates/sdad/src/: main.rs
rust/native/zygisk-shim/: zygisk_shim.cpp
(+38 files in other folders)
