[package]
name = "sda-alpha-detect"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
description = "Read-only one-shot diagnostics for the SystemDownloadAccelerator Alpha module"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
